PRJ_VER=0.7.995
SUMMARY= Fixed Bug 733540, 738958
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=733540, 738958
[Changes]
- Fixed Bug 738958 - cmake-fedora: remove excessive quotation marks for Precompile definition
- Fixed Bug 733540 - cmake-fedora: "" should be read as empty string
- ManageEnvironment: Now defined cmake_policy won't get overridden.
- ManageString: STRING_UNQUOTE is now merely remove quote marks in the beginning and
    end of string. The string will not be changed otherwise.
- UseUninstall has renamed as ManageUninstall
